# signal-analysis

./: .gitattributes  .gitignore  README.md
ifnet_stage1/: README.md  pyproject.toml  requirements.txt
ifnet_stage1/configs/: balanced_refit.yaml  default.yaml  local_jump_aux.yaml  local_jump_aux_v3.yaml  local_jump_multiscale.yaml  local_jump_refit.yaml  multiscale_identity.yaml  optimized_identity.yaml  optimized_stronger.yaml  polynomial_focus.yaml  polynomial_refit.yaml  router_hard.yaml  router_hard_v2.yaml  router_hard_v3.yaml  router_hard_v4.yaml  router_hard_v5.yaml  router_hard_v6.yaml  sinusoidal_refit.yaml
ifnet_stage1/scripts/: build_stage1_summary_pdf.py  create_env.ps1  plot_stable_combo_examples.py
ifnet_stage1/src/ifnet_stage1/: __init__.py  (+23 more)
stage2_iccd/: README.md  pyproject.toml  reference_style_analysis_zh.md  results_summary_zh.md
stage2_iccd/configs/: active_count_123_peak_p1.yaml  active_count_simple.yaml  active_count_simple_near_parallel.yaml  all_multiexpert.yaml  all_multiexpert_feature_attention_p1.yaml  all_multiexpert_ohem_p1.yaml  balanced_multicomponent_refine.yaml  crossing_first_candidate_p25.yaml  crossing_identity_p2.yaml  default.yaml  frozen_ifnet.yaml  local_jump_frozen.yaml  local_jump_segmented_p1.yaml  poly_multicomponent_refine.yaml  separated_frozen.yaml  simple_active_mixed.yaml  simple_active_mixed_p0_conservative.yaml  simple_multicomponent_long.yaml  simple_multicomponent_robust.yaml  simple_multicomponent_unfreeze_head_p1.yaml  simple_multicomponent_unfreeze_p1.yaml  simple_single_component.yaml  sinusoidal_frozen.yaml  three_component_oracle_p2.yaml  three_component_stft_candidate_p25.yaml
(+32 files in other folders)
